k8s/aat/common/sscs/sscs-track-appeal-redirect-ingress.yaml
# this is to apply permanent redirect on track-appeal.aat.platform.hmcts.net
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/redirect-regex: ^https://track-appeal.aat.platform.hmcts.net/evidence/(.*)|https://track-appeal.aat.platform.hmcts.net/trackyourappeal/(.*)|https://track-appeal.aat.platform.hmcts.net/expenses/(.*)|https://track-appeal.aat.platform.hmcts.net/abouthearing/(.*)|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/evidence|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/trackyourappeal|https://track-appeal.aat.platform.hmcts.net/valid [...]
    traefik.ingress.kubernetes.io/redirect-replacement: https://sscs-mya.aat.platform.hmcts.net/validate-surname/:tya/trackyourappeal?tya=${1}${2}${3}${4}${5}${6}${7}${8}
  name: sscs-track-appeal-redirect-ingress
  namespace: sscs
spec:
  rules:
    - host: track-appeal.aat.platform.hmcts.net
      http:
        paths:
          - backend:
              serviceName: sscs-mya-frontend-nodejs
              servicePort: 80
            path: /
